--- a/client/src/componenets/Bot/LinkList/styles.css
+++ b/client/src/componenets/Bot/LinkList/styles.css
@@ -14,10 +14,14 @@
     margin: 6px;
     display: block;
     color: #1d1d1d;
-    background-color: #f1f1f1;
+    background: color #9e9e9e;
     padding: 8px;
     border-radius: 3px;
     box-shadow: 2px 2px 4px rgba(150, 149, 149, 0.4);
     font-weight: bold;
+  }
+  .link-list-item-url :hover {
+    text-decoration: none;
+    color: #1d1d1d;
   }
   
