--- a/client/src/componenets/Bot/Bot.css
+++ b/client/src/componenets/Bot/Bot.css
@@ -14,10 +14,10 @@
     transition: 1s ease-in-out;
 }
 .clear{
+    bottom:  2px;
+    right: 2px;
     height: 50px;
     width: 50px;
-    top: 2px;
-    right: 2px;
     /* opacity:0; */
     position: absolute;
 }
